fdo#46278 - misc comment import/export fixes

detect whether note/comment is shown on import
export state of note ( shown/hidden )

parts of Change-Id: I59b446175217479ce7960287aa540df8c6b2b1e
Signed-off-by: Michael Meeks <michael.meeks@suse.com>